[gd_scene load_steps=7 format=3 uid="uid://ddl368sfmifvu"]

[ext_resource type="Script" uid="uid://dsmxsvsaco7xy" path="res://assets/scenes/Main.gd" id="1_npkpr"]
[ext_resource type="Texture2D" uid="uid://dj6ibikvkaorf" path="res://assets/art/placeholders/istockphoto-1289241322-612x612.jpg" id="2_xt100"]
[ext_resource type="Texture2D" uid="uid://bo8omeirysftt" path="res://assets/art/placeholders/Untitled_design-removebg-preview (2).png" id="4_eruk6"]
[ext_resource type="Texture2D" uid="uid://b4qxj5lb1snrw" path="res://assets/art/placeholders/igloo_home.png" id="4_jv468"]
[ext_resource type="Texture2D" uid="uid://bepho4g61xivc" path="res://assets/art/placeholders/Untitled_design-removebg-preview.png" id="5_jv468"]
[ext_resource type="Script" uid="uid://154kkc0fxfqi" path="res://cooking_manager.gd" id="7_3qypx"]

[node name="Main" type="Node2D"]
script = ExtResource("1_npkpr")

[node name="WorldLayer" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="WorldLayer"]
position = Vector2(632, 360)
scale = Vector2(2.10458, 2.31056)
texture = ExtResource("2_xt100")

[node name="PlotSpawns" type="Node2D" parent="WorldLayer"]

[node name="SpawnPoint0" type="Marker2D" parent="WorldLayer/PlotSpawns"]
z_index = 3
position = Vector2(637, 391)

[node name="SpawnPoint1" type="Marker2D" parent="WorldLayer/PlotSpawns"]
position = Vector2(419, 269)

[node name="SpawnPoint2" type="Marker2D" parent="WorldLayer/PlotSpawns"]
position = Vector2(871, 278)

[node name="SpawnPoint3" type="Marker2D" parent="WorldLayer/PlotSpawns"]
position = Vector2(406, 511)

[node name="SpawnPoint4" type="Marker2D" parent="WorldLayer/PlotSpawns"]
position = Vector2(880, 517)

[node name="SpawnPoint5" type="Marker2D" parent="WorldLayer/PlotSpawns"]
position = Vector2(251, 358)

[node name="SpawnPoint6" type="Marker2D" parent="WorldLayer/PlotSpawns"]
position = Vector2(1028, 369)

[node name="SpawnPoint7" type="Marker2D" parent="WorldLayer/PlotSpawns"]
position = Vector2(634, 224)

[node name="SpawnPoint8" type="Marker2D" parent="WorldLayer/PlotSpawns"]
position = Vector2(637, 611)

[node name="PondButton" type="TextureButton" parent="WorldLayer"]
offset_left = 25.0
offset_top = 594.0
offset_right = 372.0
offset_bottom = 701.0
texture_normal = ExtResource("4_eruk6")

[node name="IglooButton" type="TextureButton" parent="WorldLayer"]
offset_left = 139.0
offset_top = 29.0001
offset_right = 1675.0
offset_bottom = 1053.0
scale = Vector2(0.0964439, 0.0996977)
texture_normal = ExtResource("4_jv468")

[node name="ShopButton" type="TextureButton" parent="WorldLayer"]
offset_left = 1119.0
offset_top = 575.0
offset_right = 1619.0
offset_bottom = 1075.0
scale = Vector2(0.297125, 0.287037)
texture_normal = ExtResource("5_jv468")

[node name="SellWindow" type="Control" parent="WorldLayer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 0
offset_left = 1037.0
offset_top = 10.0
offset_right = 1237.0
offset_bottom = 210.0
mouse_filter = 2

[node name="Label" type="Label" parent="WorldLayer/SellWindow"]
layout_mode = 0
offset_right = 88.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "üç± For Sale"
horizontal_alignment = 1

[node name="ItemList" type="VBoxContainer" parent="WorldLayer/SellWindow"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="WorldLayer/SellWindow/ItemList"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="WorldLayer/SellWindow/ItemList/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="WorldLayer/SellWindow/ItemList/HBoxContainer"]
layout_mode = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="CoinLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
text = "Coins: 0"

[node name="FishLabel" type="Label" parent="UI"]
offset_left = 12.0
offset_top = 50.0
offset_right = 52.0
offset_bottom = 73.0
text = "Fish: 0"

[node name="CookingManager" type="Node" parent="."]
script = ExtResource("7_3qypx")
